Upgrade dependencies + small improvements